--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@google/genai": "^1.36.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.0.0",
+    "react-dom": "^19.2.4",
     "@supabase/supabase-js": "2.48.1"
   },
   "devDependencies": {
