--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.36.0",
+    "@google/genai": "1.3.0",
     "react": "19.0.0",
     "react-dom": "^19.2.4",
     "@supabase/supabase-js": "2.48.1"
